--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.452.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "simple-icons": "^15.16.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
