--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.452.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -22,6 +23,6 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0"
+    "vite": "^7.1.9"
   }
 }
