--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.452.0",
     "react": "^18.2.0",
