--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ concurrency:
 jobs:
   build:
     env:
-      - VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
-      - VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+      VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+      VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
