--- a/.github/workflows/prevent-supabase-inactivity.yaml
+++ b/.github/workflows/prevent-supabase-inactivity.yaml
@@ -2,8 +2,8 @@ name: Prevent Supabase Inactivity
 
 on:
   workflow_dispatch:  # Allows manual triggering
-  # schedule:
-  #   - cron: '0 0 * * 0'  # Runs at midnight every Sunday
+  schedule:
+    - cron: '0 0 * * 0'  # Runs at midnight every Sunday
 
 jobs:
   ping-database:
